--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "nodemailer": "^7.0.6"
   },
   "scripts": {
     "dev": "nodemon server.js",
