--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb://127.0.0.1:27017/portfolio
 
 EMAIL_USER=huytruongdinh61@gmail.com
 EMAIL_PASS=wkwc vzsl jfxy lyml
+
+JWT_SECRET=Ken090803
+ADMIN_SEED_ENABLED=false
