--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://admin:<db_password>@cluster0.j7bigf7.mongodb.net/test
+MONGODB_URI=mongodb+srv://admin:admin999@cluster0.j7bigf7.mongodb.net/test
 
 EMAIL_USER=huytruongdinh61@gmail.com
 EMAIL_PASS=wkwc vzsl jfxy lyml
